--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -15,6 +15,8 @@
   <%= @plan.user.nickname %>
 </p>
 
+<%= link_to "このプランで簡単診断する", new_diagnosis_path(plan_id: @plan.id) %>
+
 <%= link_to "一覧に戻る", plans_path %>
 
 <h2>行動ステップ</h2>
@@ -36,4 +38,4 @@
   <p>まだ行動が登録されていません</p>
 <% end %>
 
-<%= link_to "行動を追加", new_plan_plan_step_path(@plan) %>
+<%= link_to "手動で行動を追加", new_plan_plan_step_path(@plan) %>
