--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -1,4 +1,12 @@
+<%= @result.inspect %>
+
+<p>日付：<%= @plan.date %></p>
+<p>パーク：<%= @plan.park.name %></p>
+
 <%= form_with url: diagnoses_path, method: :post, data: { turbo: false } do |f| %>
+
+  <%= hidden_field_tag :plan_id, @plan.id %>
+
   <p>重視するのは？</p>
   <%= f.radio_button :focus, "attraction" %> アトラクション
   <%= f.radio_button :focus, "show" %> ショー
