簡易診断・提案ロジック（最小）

--- a/app/views/diagnoses/result.html.erb
+++ b/app/views/diagnoses/result.html.erb
@@ -1,4 +1,4 @@
-<%= @result.inspect %>
+<%#= @result.inspect %>
 <%# @result の中に :dpa_attraction が存在していて、かつ nil や false でなければ表示する %>
 
 <% if @result[:dpa_attraction] %>
