--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -31,6 +31,9 @@
         <% if step.time.present? %>
           （<%= step.time.strftime("%H:%M") %>）
         <% end %>
+        <% if step.note.present? %>
+          （<%= step.note %>）
+        <% end %>
       </li>
     <% end %>
   </ul>
