--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -19,6 +19,8 @@
 
 <%= link_to "一覧に戻る", plans_path %>
 
+<%= link_to "プランを編集", edit_plan_path(@plan) %>
+
 <%= link_to "プランを削除",
             plan_path(@plan),
             data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } %>
