行動ステップ編集

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,9 +1,17 @@
 <h1>FunFlow</h1>
 
+<h1>「ちゃんと楽しむための、段取り。」</h1>
+
+<p>
+FunFlowは、事前に行動の流れを整理することで、
+当日は迷わず、ゆっくり楽しめる状態をつくるアプリです。
+</p>
+
 <% if user_signed_in? %>
   <p>こんにちは、<%= current_user.nickname %>さん</p>
   <%= link_to 'プランを作成する', new_plan_path %>
   <ul>
+  <p>作成したプランを見る</p>
   <% if @plans.any? %>
     <% @plans.each do |plan| %>
       <li>
@@ -21,6 +29,62 @@
   <%= link_to '新規登録', new_user_registration_path %>
   <%= link_to 'ログイン', new_user_session_path %>
 <% end %>
+
+
+
+<h2>なぜFunFlowを作ったのか</h2>
+
+<p>
+最近、「楽しみにしているはずの予定なのに、<br>
+事前に考えることが多くて疲れてしまう」という声をよく聞きます。
+</p>
+
+<p>
+ディズニーリゾートもその一つです。<br>
+アプリでのパス取得や事前準備が必要になり、<br>
+「難しそう」「大変そう」と感じる人が増えました。
+</p>
+
+<p>
+しかし実際には、<br>
+やることの流れさえ整理できていれば、<br>
+以前よりもゆっくり、安心して楽しめると感じています。
+</p>
+
+<p>
+私はいつも、取得するパスや回り方を簡単なメモにまとめています。<br>
+そのメモがあるだけで、当日は迷わず行動でき、<br>
+一緒に行った人からも<br>
+「疲れなかった」「こんなにゆっくり過ごせたのは初めて」<br>
+と言ってもらえました。
+</p>
+
+<p>
+「効率よく回る」ためではなく、<br>
+「ちゃんと楽しむ」ための段取り。<br>
+</p>
+
+<p>
+その考え方を、誰でも使える形にしたのが FunFlow です。
+</p>
+
+<h2>FunFlowの考え方</h2>
+<ul>
+  <li>
+    <strong>① 状況を整理する（簡単診断）</strong><br>
+    今の目的や条件を整理し、やるべき方向性を明確にします。
+  </li>
+
+  <li>
+    <strong>② 行動の流れをつくる（プラン作成）</strong><br>
+    必要な行動を洗い出し、無理のない順番に並べます。
+  </li>
+
+  <li>
+    <strong>③ その日やることだけを見る（行動ステップ）</strong><br>
+    当日は迷わず、今やる行動に集中できます。
+  </li>
+</ul>
 
 
 
