--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,22 +1,77 @@
-<% if user_signed_in? && @plans.present? %>
-  <div data-controller="plan-list">
+<div class="top-page">
 
-    <button type="button"
-            class="secondary-button"
-            data-action="click->plan-list#toggle">
-      作成したプランを見る
-    </button>
-
-    <div class="plans-wrapper hidden" data-plan-list-target="list">
-      <ul class="plans-list">
-        <% @plans.each do |plan| %>
-          <li class="plan-item">
-            <%= link_to plan.date, plan_path(plan), class: "plan-link" %>
-            <span class="plan-park">（<%= plan.park.name %>）</span>
-          </li>
-        <% end %>
-      </ul>
+  <header class="hero">
+    <div class="hero-content">
+      <h1 class="app-name">FunFlow</h1>
+      <h1 class="catch-copy">「ちゃんと楽しむための、段取り。」</h1> 
+      <p class="app-description">
+        FunFlowは、事前に行動の流れを整理することで、
+        当日は迷わず、ゆっくり楽しめる状態をつくるアプリです。
+      </p>
     </div>
+  </header>
 
-  </div>
-<% end %>
+  <%= link_to "FunFlowとは", about_path %>
+
+  <section class="user-section">
+    <div class="user-section-inner">
+
+      <% if user_signed_in? %>
+        <p class="greeting">
+          こんにちは、<%= current_user.nickname %>さん
+        </p>
+
+        <div class="user-actions">
+          <%= link_to "新規プランを作成する",
+              new_plan_path,
+              class: "primary-button" %>
+
+          <% if @plans.present? %>
+          <div data-controller="plan-list">
+            <button type="button"
+                    class="secondary-button"
+                    data-action="click->plan-list#toggle">
+              作成したプランを見る
+            </button>
+
+            <div class="plans-wrapper hidden" data-plan-list-target="list">
+              <ul class="plans-list">
+                <% @plans.each do |plan| %>
+                  <li class="plan-item">
+                    <%= link_to plan.date, plan_path(plan), class: "plan-link" %>
+                    <span class="plan-park">（<%= plan.park.name %>）</span>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+          <% end %>
+        </div>
+        
+
+        <div class="secondary-actions">
+          <%= link_to "ログアウト",
+              destroy_user_session_path,
+              data: { turbo_method: :delete },
+              class: "logout-link" %>
+        </div>
+
+      <% else %>
+        <div class="auth-actions">
+          <%= link_to "新規登録",
+              new_user_registration_path,
+              class: "primary-button" %>
+
+          <%= link_to "ログイン",
+              new_user_session_path,
+              class: "secondary-button" %>
+        </div>
+      <% end %>
+
+    </div>
+  </section>
+
+
+  
+
+</div>
