--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -3,15 +3,20 @@
   <header class="hero">
     <div class="hero-content">
       <h1 class="app-name">FunFlow</h1>
-      <h1 class="catch-copy">「ちゃんと楽しむための、段取り。」</h1> 
+
+      <h2 class="catch-copy">「ちゃんと楽しむための、段取り。」</h2>
+
       <p class="app-description">
-        FunFlowは、事前に行動の流れを整理することで、
-        当日は迷わず、ゆっくり楽しめる状態をつくるアプリです。
+        FunFlowは、<br>
+        ディズニーリゾートで「迷わず・疲れず」過ごすために、<br>
+        行動の流れを事前に整理できるアプリです。
       </p>
     </div>
   </header>
 
-  <%= link_to "FunFlowとは", about_path %>
+  <div class="top-links">
+    <%= link_to "FunFlowについて", about_path, class: "tertiary-button" %>
+  </div>
 
   <section class="user-section">
     <div class="user-section-inner">
@@ -27,33 +32,34 @@
               class: "primary-button" %>
 
           <% if @plans.present? %>
-          <div data-controller="plan-list">
-            <button type="button"
-                    class="secondary-button"
-                    data-action="click->plan-list#toggle">
-              作成したプランを見る
-            </button>
+            <div class="plans-toggle" data-controller="plan-list">
+              <button type="button"
+                      class="secondary-button"
+                      data-action="click->plan-list#toggle">
+                作成したプランを見る
+              </button>
 
-            <div class="plans-wrapper hidden" data-plan-list-target="list">
-              <ul class="plans-list">
-                <% @plans.each do |plan| %>
-                  <li class="plan-item">
-                    <%= link_to plan.date, plan_path(plan), class: "plan-link" %>
-                    <span class="plan-park">（<%= plan.park.name %>）</span>
-                  </li>
-                <% end %>
-              </ul>
+              <div class="plans-wrapper hidden" data-plan-list-target="list">
+                <ul class="plans-list">
+                  <% @plans.each do |plan| %>
+                    <li class="plan-item">
+                      <%= link_to plan.date,
+                          plan_path(plan),
+                          class: "plan-link" %>
+                      <span class="plan-park">（<%= plan.park.name %>）</span>
+                    </li>
+                  <% end %>
+                </ul>
+              </div>
             </div>
-          </div>
           <% end %>
         </div>
-        
 
         <div class="secondary-actions">
-          <%= link_to "ログアウト",
+          <%= link_to "ログアウトする",
               destroy_user_session_path,
               data: { turbo_method: :delete },
-              class: "logout-link" %>
+              class: "tertiary-button logout-link" %>
         </div>
 
       <% else %>
@@ -70,8 +76,5 @@
 
     </div>
   </section>
-
-
-  
 
 </div>
